# taskchain-orchestrator

./: .dockerignore  .env.example  .gcloudignore  .gcloudignore.agent-orchestrator  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  README_for_me.md  SUMMARY.md  Software_Engineer_Resume_AI.md  Software_Engineer_Resume_AI.tex  TUTORIAL.md  cloudbuild.agent-orchestrator.yaml  pyproject.toml
agent-orchestrator/: .gitignore  Dockerfile  Makefile  README.md  RUNBOOK.md  pyproject.toml
agent-orchestrator/scripts/: ab_test_retrieval.py  build_chroma_index.py
agent-orchestrator/src/agent_orchestrator/api/: main.py  ui.py
agent-orchestrator/src/agent_orchestrator/config/: settings.py
agent-orchestrator/src/agent_orchestrator/graph/: llm_planner.py  state.py  workflow.py
agent-orchestrator/src/agent_orchestrator/graph/nodes/: execute.py  finalize.py  plan.py  retrieve.py  verify.py
agent-orchestrator/src/agent_orchestrator/retrieval/: __init__.py  chroma_previous_issues.py  incident_knowledge.py  previous_issues.py  shared_paths.py
agent-orchestrator/src/agent_orchestrator/storage/: __init__.py  base.py  memory.py  models.py  postgres.py
agent-orchestrator/src/agent_orchestrator/tools/: __init__.py  deterministic.py  gateway.py  llm.py  registry.py  schemas.py
agent-orchestrator/tests/integration/: test_step6_integration_parity.py
agent-orchestrator/tests/unit/: test_deterministic_priority.py  test_health.py  test_registry_context_defaults.py  test_retrieval_adapters.py  test_step4_verifier_and_planner.py  test_step7_llm_planner.py  test_step8_llm_executor.py  test_task_flow.py  test_tool_executor.py
company_details/: .dockerignore  AGENT_CONTEXT_FOR_MOCK_ENV.md  Makefile  RAG_PIPELINE_TUTORIAL.md  README.md  docker-compose.yml
(+82 files in other folders)
